--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,20 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
 
     <SeekBar
         android:id="@+id/id_slide_choose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="1dp"
-        android:maxHeight="1dp"
+        android:minHeight="2dp"
+        android:maxHeight="2dp"
         android:progressDrawable="@drawable/widget_slider_style"
         android:thumb="@drawable/huakuanyangshi"
         android:padding="10dp"
-        />
+        android:indeterminate="false" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                android:padding="10dp"
+                android:id="@+id/mySeekBar"
+                android:minHeight="2dp"
+                android:maxHeight="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:progressDrawable="@drawable/widget_slider_style"
+                android:thumb="@drawable/huakuanyangshi"
+                android:splitTrack="false"
+                app:seekBarRotation="CW90" /> <!-- Rotation: CW90 or CW270 -->
+        </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
+
+    </RelativeLayout>
 
 
     <!--
@@ -23,6 +45,9 @@
         通过android:thumb定义滑块的样式
         通过结合android:minHeight 和 android:maxHeight 设置高度
     -->
+
+
+
 
 
 
